--- a/css/screen.css
+++ b/css/screen.css
@@ -25,8 +25,7 @@ iframe {
     margin: 1em; 
     padding: 1ex !important;
     position: absolute !important; 
-    top: 30px; 
-    right: 30px;
+    top: 0; left: 0;
     z-index: 10; 
 }
 
