--- a/css/screen.css
+++ b/css/screen.css
@@ -13,11 +13,16 @@ body {
 #gobar div { width: 50%; position: absolute; }
 #gobar input[type="text"] { width: 70%; margin: 10px; padding: 6px; }
 
-.frame { width: 50%; height: 100%; position: relative;}
+button u {display:inline;}
+button {padding:5px;}
+
+.frameblocker { width: 100%; height: 100%; position: absolute; top:0; left: 0; z-index: 5; background: transparent; overflow: hidden; }
+
+.frame { width: 50%; height: 100%; position: relative; overflow:hidden; }
 iframe {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
 }
 
