--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,7 @@ body {
 #header { width: 100%; padding: 1ex;}
 
 #features { text-align:center; }
-#features a { padding-left: 1ex; }
+#features a { padding-left: 1ex; text-decoration:none; }
 #gobar { display: block; width: 100%; height: 40px;  }
 #gobar div { width: 50%; position: absolute; }
 #gobar input[type="text"] { width: 70%; margin: 10px; padding: 6px; }
