--- a/css/screen.css
+++ b/css/screen.css
@@ -9,9 +9,10 @@ body {
 
 #features { text-align:center; }
 #features a { padding-left: 1ex; text-decoration:none; }
-#gobar { display: block; width: 100%; height: 40px;  }
-#gobar div { width: 50%; position: absolute; }
-#gobar input[type="text"] { width: 70%; margin: 10px; padding: 6px; }
+#gobar { position: relative; display: block; width: 100%; height: 40px;  }
+#gobar div { width: 50%; position: absolute; top: 0;}
+#url0, #url1 { height: 30px; width: 400px; margin: 10px; padding: 6px; }
+.IE #go { top: -3px; }
 
 button u {display:inline;}
 button {padding:5px;}
@@ -62,15 +63,14 @@ iframe {
 #progress { z-index: 100; width: 300px; margin: 12px auto 6px auto; }
 #progress .ui-widget-header { background: #C1D82F !important; }
 
-
 #repeat-form ul li { list-style: none; margin: 5px; }
 #race-form table { text-align: center; }
 #race-form input[type="text"] {
-    width: 250px;
+    width: 250px; padding: 6px; font-size: 12px;
 }
 
 #data-form textarea { 
-    width: 90%; height: 450px;
+    width: 90%; height: 440px;
     margin: 0 2em; 
     padding: 1em;
     border: solid 1px black;
