--- a/css/screen.css
+++ b/css/screen.css
@@ -11,8 +11,8 @@ body {
 #features a { padding-left: 1ex; text-decoration:none; }
 #gobar { position: relative; display: block; width: 100%; height: 40px;  }
 #gobar div { width: 50%; position: absolute; top: 0;}
-#url0, #url1 { height: 30px; width: 400px; margin: 10px; padding: 6px; }
-.IE #go { top: -3px; }
+#url0, #url1 { height: 30px; width: 70%; margin: 10px; padding: 6px; }
+.IE #go { top: -8px; }
 
 button u {display:inline;}
 button {padding:5px;}
