Add share link. Fix a bug where splash screen run wasn't having it's run key calculated properly.

--- a/css/screen.css
+++ b/css/screen.css
@@ -81,3 +81,5 @@ iframe {
 #matchups { text-align: center; }
 #matchups button { margin-top: 1ex; }
 
+#share textarea { width: 100%; padding: 6px; }
+
