Added settings page. Incldes a toggle to load pages in serial (experimental), and a theme chooser! :)

--- a/css/screen.css
+++ b/css/screen.css
@@ -5,6 +5,8 @@ body {
     padding: 0;
 }
 
+dt { font-weight: bold; padding: 1em; }
+
 #header { width: 100%; padding: 1ex;}
 
 #features { text-align:center; }
