--- a/css/screen.css
+++ b/css/screen.css
@@ -9,6 +9,7 @@ dt { font-weight: bold; padding: 1em; }
 
 #header { width: 100%; padding: 1ex;}
 
+#logo { font-weight: bold; display: inline; padding-right: 1ex}
 #features { text-align:center; }
 #features a { padding-left: 1ex; text-decoration:none; }
 #gobar { position: relative; display: block; width: 100%; height: 40px;  }
