--- a/css/screen.css
+++ b/css/screen.css
@@ -24,6 +24,8 @@ button {padding:5px;}
 .frameblocker { width: 100%; height: 100%; position: absolute; top:0; left: 0; z-index: 5; background: transparent; overflow: hidden; }
 
 .frame { width: 50%; height: 100%; position: relative; overflow:hidden; }
+.IE6 .frame { width: 49.999%; }
+
 iframe {
     width: 100%;
     height: 100%;
@@ -63,6 +65,8 @@ iframe {
     bottom: 0; font-size: 18px; color: white;
     background: transparent url(../img/square_bg.png) no-repeat top center;
 }
+.IE6 #average { margin-left: -165px; }
+.IE6 #average div { margin-left: -100px; }
 
 #progress { z-index: 100; width: 300px; margin: 12px auto 6px auto; }
 #progress .ui-widget-header { background: #C1D82F !important; }
@@ -87,4 +91,6 @@ iframe {
 #about p { margin: 1em 2em; }
 
 #share textarea { width: 100%; padding: 6px; }
+
+img { border: none; }
 
