--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -94,3 +94,6 @@ iframe {
 
 img { border: none; }
 
+#noscript { z-index: 100000; text-align: center;}
+#noscript h1 { z-index: 100001; margin: auto; margin-top: 20%; width: 500px;}
+
